# kaiwa-fish

./: .gitignore  docker-compose.yml  index.html  pyproject.toml  remover.py  stream.js
kaiwa-ai/: README.md  pyproject.toml
kaiwa-ai/prompts/: bannam.txt  fate.txt  marui.txt  miyagi.txt  miyagi_en.txt  nipro.txt  nurudesasara.txt  rinu.txt  rinu2nanamori.txt  rinu_bannam.txt  sbi.txt  tabist.txt  testosterone.txt
kaiwa-ai/scripts/: huggingface_dl.py
kaiwa-ai/src/: character.toml  config_loader.py  emotion_analysis.py  kaiwa.py  kaiwa_server.py  llm.py  log.py  schemes.py  tts.py
tests/: test_kaiwa_server.py  test_websocket.py
