[project]
name = "kaiwa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "huggingface-hub>=0.26.3",
    "openai>=1.58.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "toml>=0.10.2",
    "uvicorn>=0.34.0",
]
